...
              });
              Navigator.pop(context);
            },
          ),
          ListTile(
            leading: const Icon(Icons.list_alt, color: Colors.white70),
            title: const Text('Quản lý Đơn hàng', style: TextStyle(color: Colors.white)),
            onTap: () {
              setState(() {
                _currentView = 'ORDERS';
                _editingProduct = null;
              });
              Navigator.pop(context);
            },
          ),
          ListTile(
            leading: const Icon(Icons.inventory_2, color: Colors.white70),
            title: const Text('Quản lý Sản phẩm', style: TextStyle(color: Colors.white)),
            onTap: _navigateToProducts,
          ),
          ListTile(
            leading: const Icon(Icons.rate_review, color: Colors.white70),
            title: const Text('Quản lý Đánh giá', style: TextStyle(color: Colors.white)),
            onTap: () {
...
